--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,11 +1,29 @@
 .navbar {
   width: 100%;
-  background-color: black;
-  padding: 15px 0px;
-  text-align: right;
+  background-color: white;
+  padding: 15px 0;
+  display: flex;
+  align-items: center; /* 수직 중앙 정렬 */
+  text-align: left;
 }
+
 .navbarMenu {
-  color: white;
-  margin: 8px;
+  color: black;
+  margin-left: 20px; /* 링크 간의 간격 설정 */
   text-decoration: none;
+}
+
+.navbarMenu:hover {
+  text-decoration: underline; /* 마우스를 올리면 밑줄 표시 */
+}
+
+.h1 {
+  color: black;
+  margin: 0 20px; /* 제목과 링크 간의 여백 */
+  font-size: 30px;
+}
+
+.navbar h1 {
+  margin-left: 20px; /* 제목 위치 설정 */
+  font-size: 30px;
 }
