--- a/src/Title.css
+++ b/src/Title.css
@@ -4,7 +4,7 @@
   padding-top: 100px; /* 텍스트가 중앙보다 조금 더 높게 위치하도록 설정 */
   padding-bottom: 10px; /* 제목 아래에 여백 */
   color: white;
-  background-image: url("./images/background.jpg"); /* 배경 이미지 */
+  background-image: url("../public/images/background.jpg"); /* 배경 이미지 */
   background-size: cover;
   background-position: top center;
   min-height: 37vh; /* 화면의 상단 40%만 배경 이미지로 사용 */
