--- a/src/Title.css
+++ b/src/Title.css
@@ -1,17 +1,19 @@
-/* Title 컴포넌트 */
 .title-container {
   text-align: center;
-  padding-top: 100px; /* 텍스트가 중앙보다 조금 더 높게 위치하도록 설정 */
-  padding-bottom: 10px; /* 제목 아래에 여백 */
+  padding-top: 80px;
+  padding-bottom: 10px;
   color: white;
-  background-image: url("../public/images/background.jpg"); /* 배경 이미지 */
+
+  background-image: url("../public/images/background.jpg");
   background-size: cover;
-  background-position: top center;
-  min-height: 37vh; /* 화면의 상단 40%만 배경 이미지로 사용 */
+  background-position: center;
+
+  height: 400px;
+
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start; /* flex-start로 조정하여 텍스트가 중앙보다 위로 위치 */
+  justify-content: flex-start;
 }
 
 .title-container h1 {
